--- a/pre-processing.qmd
+++ b/pre-processing.qmd
@@ -41,12 +41,14 @@ We will load the dataset into two separate tibbles, each tibble will store the s
 
 # Loading of current military spending sheet based on current USD exchange rate
 current_us <- read_excel(
-  "SIPRI-Milex-data-2018-2023.xlsx", sheet = "Current US$", skip = 5
+  "SIPRI-Milex-data-2018-2023.xlsx",
+  sheet = "Current US$", skip = 5
 )
 
 # Loading of percentage of spending based on GDP
 share_gdp <- read_excel(
-  "SIPRI-Milex-data-2018-2023.xlsx", sheet = "Share of GDP", skip = 5
+  "SIPRI-Milex-data-2018-2023.xlsx",
+  sheet = "Share of GDP", skip = 5
 )
 ```
 
@@ -70,7 +72,7 @@ current_us <- current_us |>
 
 # Change column names from '2018.0' to '2018'
 current_us <- current_us |>
-  rename_with(~sub("\\.0$", "", .))
+  rename_with(~ sub("\\.0$", "", .))
 
 # Drop rows that the second column is NA
 current_us <- current_us |>
@@ -78,7 +80,7 @@ current_us <- current_us |>
 
 # Mutate '...' values to empty
 current_us <- current_us |>
-  mutate(across(everything(), ~replace(., . == "...", NA)))
+  mutate(across(everything(), ~ replace(., . == "...", NA)))
 
 # Convert all columns to numeric
 current_us <- current_us |>
@@ -100,7 +102,7 @@ To reduce the size of the data, we will convert the military spending from milli
 
 # Convert Military Spending from Millions to Billions
 current_us <- current_us |>
-  mutate(across(-Country, ~. / 1000))
+  mutate(across(-Country, ~ . / 1000))
 
 # Convert Data to Integer
 current_us <- current_us |>
@@ -124,7 +126,7 @@ share_gdp <- share_gdp |>
 
 # Change column names from '2018.0' to '2018'
 share_gdp <- share_gdp |>
-  rename_with(~sub("\\.0$", "", .))
+  rename_with(~ sub("\\.0$", "", .))
 
 # Drop rows that the second column is NA
 share_gdp <- share_gdp |>
@@ -132,7 +134,7 @@ share_gdp <- share_gdp |>
 
 # Mutate '...' values to empty
 share_gdp <- share_gdp |>
-  mutate(across(everything(), ~replace(., . == "...", NA)))
+  mutate(across(everything(), ~ replace(., . == "...", NA)))
 
 # Convert all columns to numeric
 share_gdp <- share_gdp |>
@@ -144,11 +146,11 @@ share_gdp <- share_gdp |>
 
 # Convert to percentage
 share_gdp <- share_gdp |>
-  mutate(across(-Country, ~. * 100))
+  mutate(across(-Country, ~ . * 100))
 
 # Change to 2 decimal point
 share_gdp <- share_gdp |>
-  mutate(across(-Country, ~round(., 2)))
+  mutate(across(-Country, ~ round(., 2)))
 
 share_gdp
 ```
@@ -186,7 +188,8 @@ merged_data
 merged_data <- merged_data |>
   mutate(
     Country = factor(
-      Country, levels = c(
+      Country,
+      levels = c(
         "Japan",
         "France",
         "Ukraine",
